add Title and About Me section

--- a/index.html
+++ b/index.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/styles.css">
+
     <meta charset="utf-8">
-    <title></title>
+    <title>Portfolio</title>
   </head>
   <body>
+  <div class="container">
+    <div class="jumbotron">
+      <h1>Brendon's Portfolio</h1>
+      <p>Current Epicodus Student</p>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="well">
+          <h2>About Me</h2>
+          <img src="https://scontent-lax3-1.cdninstagram.com/vp/90dee91e78e01996903cc24969749a7f/5D8DFD51/t51.2885-15/e35/35526035_1013964248760194_7869509430742614016_n.jpg?_nc_ht=scontent-lax3-1.cdninstagram.com" alt="Brendon" style="float:left;width:20%;">
+          <p class="padding1">My name is Brendon and I'm a student at Epicodus. I have a few friends who work as web developers and recommended that I give coding school a chance if I wanted to step into the field of tech. Up until now, I have been working towards a degree in business but I haven't found anything that I felt passionate about until now. I'm hoping Epicodus will be the first major stepping stone to a career that I will love and enjoy for many years to come!
+          </p>
+        </div>
+      </div>
+    </div>
+    
+  </div>
 
 <!-- jQuery script-->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<!-- jQuery end -->
   </body>
 </html>
