--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Portfolio</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css" type="text/css">
 </head>
+
 <body>
   <div class="container">
     <div class="jumbotron">
@@ -20,7 +22,8 @@
         <div class="well">
           <h2>About Me</h2>
           <img src="https://scontent-lax3-1.cdninstagram.com/vp/90dee91e78e01996903cc24969749a7f/5D8DFD51/t51.2885-15/e35/35526035_1013964248760194_7869509430742614016_n.jpg?_nc_ht=scontent-lax3-1.cdninstagram.com" alt="Brendon">
-          <p>My name is Brendon and I'm a student at Epicodus. I have a few friends who work as web developers and recommended that I give coding school a chance if I wanted to step into the field of tech. Up until now, I have been working towards a degree in business but I haven't found anything that I felt passionate about until now. I'm hoping Epicodus will be the first major stepping stone to a career that I will love and enjoy for many years to come!
+          <p>My name is Brendon and I'm a student at Epicodus. I have a few friends who work as web developers and recommended that I give coding school a chance if I wanted to step into the field of tech. Up until now, I have been working towards a
+            degree in business but I haven't found anything that I felt passionate about until now. I'm hoping Epicodus will be the first major stepping stone to a career that I will love and enjoy for many years to come!
           </p>
         </div>
       </div>
@@ -28,10 +31,15 @@
     <div class="well">
       <h2>Projects</h2>
       <ul>
+        <li><a href="https://github.com/brendontse/roman-numeral-maker">Roman Numeral Converter</a></li>
+        <p>The Roman Numeral Converter was my first project that tested my understanding of arrays, looping, and the separation of front-end and back-end logic. The purpose of the webpage was to be able to take a user's numerical input and return the
+          same number back but as a roman numeral. </p>
         <li><a href="https://github.com/brendontse/adoption-project">Adoption Project</a></li>
-          <p>The Adoption Project was my first experience with framing and setting up elements to be in the right places. This was also the first time I had visualize how I wanted the final result to look like <strong>before</strong> I started building it.</p>
+        <p>The Adoption Project was my first experience with framing and setting up elements to be in the right places. This was also the first time I had visualize how I wanted the final result to look like <strong>before</strong> I started building
+          it.</p>
         <li><a href="https://github.com/brendontse/resort-website">Resort Project</a>
-          <p>The Resort Project was probably one of my favorite projects to work on this week. The project allowed me (and my partner!) to utilize the skills we had learned up to that point. Since we ended up with extra time, we looked into and figured out how to embed a video from Youtube and have it play directly on the page. Turns out, Youtube has made this process incredibly easy!</p>
+          <p>The Resort Project was probably one of my favorite projects to work on this week. The project allowed me (and my partner!) to utilize the skills we had learned up to that point. Since we ended up with extra time, we looked into and
+            figured out how to embed a video from Youtube and have it play directly on the page. Turns out, Youtube has made this process incredibly easy!</p>
         </li>
       </ul>
     </div>
@@ -47,11 +55,14 @@
       <h2>Interest and Hobbies</h2>
       <ul>
         <li>Video Games</li>
-          <p>I've enjoyed video games from a very young age and never truly stopped as I got older. Unfortunately, the amount of free time I have has gotten smaller as I got older! It's become of the best ways to keep in touch with distant friends while still having a good time together.</p>
+        <p>I've enjoyed video games from a very young age and never truly stopped as I got older. Unfortunately, the amount of free time I have has gotten smaller as I got older! It's become of the best ways to keep in touch with distant friends
+          while still having a good time together.</p>
         <li>Cosplay and Modeling</li>
-          <p>My other major hobby is cosplaying! Cosplaying is a lot like Halloween but you can do it at whatever time of the year you'd like. Pick a character you like from a show, game, anywhere really, create everything that character wears in an effort to recreate them in real life. It's a topic I usually don't share with new friends but it's one of the most important aspects of my life and has led me to so many friends and incredible memories.</p>
+        <p>My other major hobby is cosplaying! Cosplaying is a lot like Halloween but you can do it at whatever time of the year you'd like. Pick a character you like from a show, game, anywhere really, create everything that character wears in an
+          effort to recreate them in real life. It's a topic I usually don't share with new friends but it's one of the most important aspects of my life and has led me to so many friends and incredible memories.</p>
       </ul>
     </div>
   </div>
 </body>
+
 </html>
